--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2"
+  },
+  "dependencies": {
+    "jasmine-core": "^2.5.2"
   }
 }
